# scene-intelligence

./: .env.example  .gitignore  alembic.ini  pyproject.toml  readme.md
_bmad/: config.toml  config.user.toml
_bmad/_config/: files-manifest.csv  (+1 more)
api/: README.md  __init__.py  envelope.py  main.py  routes_ingest.py  routes_media.py  routes_metrics.py  routes_search.py
deploy/: Dockerfile  README.md  backup.sh  docker-compose.yml  entrypoint.sh
eval/: README.md  __init__.py
migrations/: env.py
models/: README.md  __init__.py
pipeline/: README.md  __init__.py  describe.py  describe_backends.py  detect.py  detect_backends.py  embed_backends.py  embed_index.py  enrich.py  enrich_backends.py  enrich_vision.py  enrich_vision_backends.py  ingest.py  metrics.py  noise.py  registry.py  worker_main.py  workers.py
search/: README.md  __init__.py  candidates.py  fts_candidates.py  fuse.py  query_embed.py  rank.py  rerank.py  service.py
shared/: README.md  __init__.py  config.py  db.py  filters.py  ids.py  logging.py  models.py  storage.py  versioning.py
tests/: conftest.py  test_candidates_filter_order.py  test_config.py  test_describe.py  test_detect.py  test_embed_index.py  test_enrich.py  test_enrich_vision.py  test_filters.py  test_health.py  test_ids.py  test_ingest.py  test_ingest_reclaim.py  test_metrics.py  test_noise.py  test_registry.py  test_routes_media.py  test_search_fuse.py  test_search_rank.py  test_search_route.py  test_search_service.py  test_storage.py  test_versioning.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+40 files in other folders)
